[package]
name = "dyld-shared-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.9.2"
bitfield = "0.14.0"
bitfields = "0.2.0"
capstone = "0.11.0"
clap = { version = "3.2.12", features = ["derive"] }
custom_debug = "0.5.0"
memmap2 = "0.5.5"
nano-leb128 = "0.1.0"
object = { path = "../object", features = ["write"] }
uuid = "1.1.2"
